home: resolve 'snapping' on mobile browser

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -447,7 +447,7 @@ h1 {
 }
 
 #home {
-  height: 100dvh;
+  height: 100svh;
   // height: 100vh;
   min-height: 620px;
   width: 100%;
